# git-101

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  exercise_suggestion.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/copilot/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: GETTING_STARTED.md  pipeline.md
grades/grade-1/: README.md
grades/grade-2/: README.md  practice.txt
grades/grade-3/: README.md  practice.txt
grades/grade-4/: README.md  feature.txt  team-config.txt
grades/grade-5/: README.md  practice.txt
grades/grade-6/: README.md  practice.txt
grades/grade-7/: README.md  practice.txt
grades/grade-8/: README.md  practice.txt
src/: __init__.py  config.py  main.py
tests/: conftest.py  test_config.py
tips/: cheatsheet.md
