[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "<repo-name>"
version = "0.1.0"
description = "<short project description>"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Tom Fynes", email = "tf.dev@icloud.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://fynes-forge.github.io"
Repository = "https://github.com/fynes-forge/<repo-name>"
Issues = "https://github.com/fynes-forge/<repo-name>/issues"

# ── Ruff ─────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "N",    # pep8-naming
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "ANN",  # flake8-annotations
  "PTH",  # flake8-use-pathlib
  "RUF",  # ruff-specific rules
]
ignore = [
  "ANN101",  # missing type annotation for self
  "ANN102",  # missing type annotation for cls
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]  # don't require type hints in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ── pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]

# ── coverage ──────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/__main__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
